--- a/RadialGlow.css
+++ b/RadialGlow.css
@@ -8,12 +8,12 @@
   --rs-large-width: 2px; /* Default: 2px */
   --rs-avatar-shape: var(--avatar-roundness, 50%); /* Border-radius for profile image | Default: 50% */
   /* Customizable colors */
-  --rs-online-color: #299f5b; /* Default: #43b581 */
-  --rs-idle-color: #e6ae3c; /* Default: #faa61a */
-  --rs-dnd-color: #ea474b; /* Default: #f04747 */
-  --rs-offline-color: #80848e; /* Default: #636b75 */
+  --rs-online-color: #43b581; /* Default: #43b581 */
+  --rs-idle-color: #faa61a; /* Default: #faa61a */
+  --rs-dnd-color: #f04747; /* Default: #f04747 */
+  --rs-offline-color: #636b75; /* Default: #636b75 */
   --rs-streaming-color: #643da7; /* Default: #643da7 */
-  --rs-invisible-color: #5b3a91; /* Default: #747f8d */
+  --rs-invisible-color: #747f8d; /* Default: #747f8d */
   --rs-phone-color: var(--rs-online-color); /* Color of the phone for mobile users | Default: var(--rs-online-color) */
   --rs-phone-visible: block; /* Visibility of the phone for mobile users | Default: block */
 }
